--- a/view/clientes/update.html
+++ b/view/clientes/update.html
@@ -1,31 +1,37 @@
-<legend>Pessoa</legend>
+<legend>Cliente</legend>
 
 <div ng-init="loadRow()">
 
     <form name="form" class="form-horizontal" ng-show="row != null">
 
+        <!--sq_pessoa hidden-->
         <input name="sq_pessoa" type="hidden" ng-model="row.sq_pessoa" ng-disabled="row.isUpdate" />
+        <!--sq_pessoa hidden-->
 
+        <!--campo nome-->
         <div class="form-group">
-            <label class="col-sm-1 control-label">Nome</label>
+            <label class="col-sm-2 control-label">Nome</label>
 
-            <div class="col-sm-4">
+            <div class="col-xs-12 col-sm-6 col-md-6">
                 <input class="form-control" placeholder="Nome e sobrenome" name="ds_nome" required type="text" ng-model="row.ds_nome"/>
             </div>
 
-            <div class="help-block">
+            <div class="help-block-input col-xs-12 col-sm-4 col-md-4">
                 <span class="text-danger" ng-show="form.ds_nome.$dirty && form.ds_nome.$invalid"><i class="glyphicon glyphicon-remove-sign"></i> Campo obrigatório</span>
             </div>
+
         </div>
+        <!--campo nome-->
 
+        <!--campo email-->
         <div class="form-group">
-            <label class="col-sm-1 control-label">Email</label>
+            <label class="col-sm-2 control-label">Email</label>
 
-            <div class="col-sm-4">
+            <div class="col-xs-12 col-sm-6 col-md-6">
                 <input class="form-control" placeholder="E-mail" name="ds_email" type="email" ng-model="row.ds_email" required/>
             </div>
 
-            <div class="help-block">
+            <div class="help-block-input col-xs-12 col-sm-4 col-md-4">
                 <span class="text-danger" ng-show="form.ds_email.$dirty && form.ds_email.$invalid"><i class="glyphicon glyphicon-remove-sign"></i>
                     <span ng-show="form.ds_email.$error.required">Campo obrigatório</span>
                     <span ng-show="form.ds_email.$error.email">Email inválido</span>
@@ -33,13 +39,34 @@
             </div>
 
         </div>
+        <!--campo email-->
+
+        <!--campo perfil-->
+        <div class="form-group">
+
+            <label class="col-sm-2 control-label">Perfil</label>
+
+            <div class="col-sm-10">
+
+                <label class="radio-inline">
+                    <input type="radio" name="sq_perfil" value="1" ng-model="row.sq_perfil" required /> Administrador
+                </label>
+
+                <label class="radio-inline">
+                    <input type="radio" name="sq_perfil" value="2" ng-model="row.sq_perfil" required /> Cliente
+                </label>
+
+            </div>
+        </div>
+        <!--campo perfil-->
 
         <div class="form-group">
-            <div class="col-sm-offset-1 col-sm-11">
+            <div class="col-sm-offset-2 col-sm-10">
                 <button type="submit" class="btn btn-primary" ng-click="save()" ng-Disabled="form.$invalid">Salvar</button>
                 <a class="btn btn-default" href="#/clientes">Voltar</a>
                 <button class="btn btn-danger" ng-click="del()">Apagar</button>
             </div>
+        </div>
 
     </form>
 
