--- a/css/complemento.css
+++ b/css/complemento.css
@@ -1,10 +1,10 @@
 /*Ajuste para modal*/
 body.modal-open .container-fluid{
-/*    -webkit-filter: blur(6px);
-    -moz-filter: blur(6px);
-    -o-filter: blur(6px);
-    -ms-filter: blur(6px);
-    filter: blur(6px);*/
+    /*    -webkit-filter: blur(6px);
+        -moz-filter: blur(6px);
+        -o-filter: blur(6px);
+        -ms-filter: blur(6px);
+        filter: blur(6px);*/
 }
 
 .modal-backdrop {
@@ -74,4 +74,9 @@ body {
 /* Ajusta helpblock */
 .help-block-input {
     margin-top: 7px;
+}
+
+/*texto cinza*/
+.text-gray {
+    color: gray;
 }
