--- a/view/clientes/main.html
+++ b/view/clientes/main.html
@@ -13,6 +13,8 @@
                 <th>E-mail</th>
 
                 <th>Perfil</th>
+                
+                <th>Ações</th>
             </tr>
 
         </thead>
