--- a/view/clientes/update.html
+++ b/view/clientes/update.html
@@ -16,16 +16,25 @@
         <!--campo nome-->
         <div class="form-group">
 
-            <label class="col-sm-2 control-label">
-                <i class="glyphicon glyphicon-user"></i> Nome
-            </label>
+            <label class="col-sm-2 control-label">Nome</label>
 
             <div class="col-xs-12 col-sm-6 col-md-6">
-                <input class="form-control" placeholder="Nome e sobrenome" name="ds_nome" required type="text" ng-model="row.ds_nome"/>
+                <input class="form-control"
+                       placeholder="Nome e sobrenome"
+                       name="ds_nome"
+                       type="text"
+                       ng-maxlength="50"
+                       maxlength="50"
+                       ng-model="row.ds_nome"
+                       required/>
             </div>
 
             <div class="help-block-input col-xs-12 col-sm-4 col-md-4">
-                <span class="text-danger" ng-show="form.ds_nome.$dirty && form.ds_nome.$invalid"><i class="glyphicon glyphicon-remove-sign"></i> Campo obrigatório</span>
+                <span class="text-danger" ng-show="form.ds_nome.$dirty && form.ds_nome.$invalid">
+                    <i class="glyphicon glyphicon-remove-sign"></i>
+                    <span ng-show="form.ds_nome.$error.required">Campo obrigatório</span>
+                    <span ng-show="form.ds_nome.$error.maxlength">Máximo de cinquenta caracteres</span>
+                </span>
             </div>
 
         </div>
@@ -34,12 +43,18 @@
         <!--campo email-->
         <div class="form-group">
 
-            <label class="col-sm-2 control-label">
-                <i class="glyphicon glyphicon-envelope"></i> Email
-            </label>
+            <label class="col-sm-2 control-label">E-mail</label>
+
 
             <div class="col-xs-12 col-sm-6 col-md-6">
-                <input class="form-control text-lowercase" placeholder="E-mail" name="ds_email" type="email" ng-model="row.ds_email" required/>
+                <input class="form-control text-lowercase"
+                       placeholder="E-mail"
+                       name="ds_email"
+                       type="email"
+                       ng-model="row.ds_email"
+                       maxlength="50"
+                       ng-maxlength="50"
+                       required/>
             </div>
 
             <div class="help-block-input col-xs-12 col-sm-4 col-md-4">
@@ -48,6 +63,7 @@
                     <i class="glyphicon glyphicon-remove-sign"></i>
                     <span ng-show="form.ds_email.$error.required">Campo obrigatório</span>
                     <span ng-show="form.ds_email.$error.email">Email inválido</span>
+                    <span ng-show="form.ds_email.$error.maxlength">Máximo de cinquenta caracteres</span>
                 </span>
 
             </div>
@@ -55,10 +71,76 @@
         </div>
         <!--campo email-->
 
+        <!--campo senha-->
+        <div class="form-group">
+
+            <label class="col-sm-2 control-label">Senha</label>
+
+
+            <div class="col-xs-12 col-sm-6 col-md-6">
+
+                <input class="form-control"
+                       placeholder="Senha"
+                       name="ds_senha"
+                       type="password"
+                       maxlength="20"
+                       ng-maxlength="20"
+                       ng-minlength="4"
+                       ng-model="row.ds_senha"
+                       required/>
+            </div>
+
+            <div class="help-block-input col-xs-12 col-sm-4 col-md-4">
+
+                <span class="text-danger" ng-show="form.ds_senha.$dirty && form.ds_senha.$invalid">
+                    <i class="glyphicon glyphicon-remove-sign"></i>
+                    <span ng-show="form.ds_senha.$error.required">Campo obrigatório</span>
+                    <span ng-show="form.ds_senha.$error.minlength">Mínimo de quatro caracteres</span>
+                    <span ng-show="form.ds_senha.$error.maxlength">Máximo de vinte caracteres</span>
+                </span>
+
+            </div>
+
+        </div>
+        <!--campo senha-->
+
+        <!--campo confirma senha-->
+        <div class="form-group">
+
+            <label class="col-sm-2 control-label">Repita a senha</label>
+
+
+            <div class="col-xs-12 col-sm-6 col-md-6">
+
+                <input class="form-control"
+                       placeholder="Repita a senha"
+                       name="re_senha"
+                       type="password"
+                       maxlength="20"
+                       ng-model="row.re_senha"
+                       ng-maxlength="20"
+                       ng-minlength="4"
+                       required/>
+            </div>
+
+            <div class="help-block-input col-xs-12 col-sm-4 col-md-4">
+
+                <span class="text-danger" ng-show="form.re_senha.$dirty && form.re_senha.$invalid">
+                    <i class="glyphicon glyphicon-remove-sign"></i>
+                    <span ng-show="form.re_senha.$error.required">Campo obrigatório</span>
+                    <span ng-show="form.re_senha.$error.minlength">Mínimo de quatro caracteres</span>
+                    <span ng-show="form.re_senha.$error.maxlength">Máximo de vinte caracteres</span>
+                </span>
+
+            </div>
+
+        </div>
+        <!--campo confirma senha-->
+
         <!--campo perfil-->
         <div class="form-group">
 
-            <label class="col-sm-2 control-label"><i class="glyphicon glyphicon-flag"></i> Perfil</label>
+            <label class="col-sm-2 control-label">Perfil</label>
 
             <div class="col-sm-10 radio">
 
@@ -78,7 +160,7 @@
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
 
-                <button type="submit" class="btn btn-primary btn-sm" ng-click="save()" ng-Disabled="form.$invalid">Salvar 
+                <button type="submit" class="btn btn-primary btn-sm" ng-click="save()" ng-Disabled="form.$invalid">Salvar
                     <i class="glyphicon glyphicon-save"></i>
                 </button>
 
