--- a/view/user/update.html
+++ b/view/user/update.html
@@ -164,7 +164,7 @@
                     <i class="glyphicon glyphicon-save"></i>
                 </button>
 
-                <a class="btn btn-default btn-sm" href="#/clientes">Voltar
+                <a class="btn btn-default btn-sm" href="#/user">Voltar
                     <i class="glyphicon glyphicon-remove"></i>
                 </a>
 
