--- a/view/user/edit.html
+++ b/view/user/edit.html
@@ -1,167 +1,240 @@
-<legend>Editar usuário</legend>
+<legend>Edição de usuário</legend>
 
-<div ng-init="loadRowLoged(user.sq_pessoa)">
+<script>
 
-    <!--Apresentação-->
-    <h1><span class="text-primary hidden-xs" ng-bind="row.ds_nome"></span></h1>
-    <h2><span class="text-primary hidden-sm hidden-md hidden-lg" ng-bind="row.ds_nome"></span></h2>
+    $('#tabPessoal a').click(function (e) {
+        e.preventDefault()
+        $(tab).tab('show')
+    })
 
-    <form name="form" class="form-horizontal" ng-show="row != null">
+    $('#tabAcesso a').click(function (e) {
+        e.preventDefault()
+        $(tab).tab('show')
+    })
+</script>
 
-        <!--sq_pessoa hidden-->
-        <input name="sq_pessoa" type="hidden" ng-model="row.sq_pessoa" ng-disabled="row.isUpdate" />
-        <!--sq_pessoa hidden-->
+<div ng-init="userController">
 
-        <!--campo nome-->
-        <div class="form-group">
-            <label class="col-sm-2 control-label">Nome</label>
+    <!--tabs-->
+    <div role="tabpanel">
 
-            <div class="col-xs-12 col-sm-6 col-md-6">
-                <input class="form-control"
-                       placeholder="Nome e sobrenome"
-                       name="ds_nome"
-                       type="text"
-                       ng-maxlength="50"
-                       maxlength="50"
-                       ng-model="row.ds_nome"
-                       required/>
+        <!-- Nav tabs -->
+        <ul class="nav nav-tabs" role="tablist">
+
+            <li id="tabPessoal" role="presentation" class="active">
+                <a  href="#pessoal" aria-controls="home" role="tab" data-toggle="tab">Pessoal</a>
+            </li>
+
+            <li id="tabAcesso" role="presentation">
+                <a  href="#acesso" aria-controls="profile" role="tab" data-toggle="tab">Acesso</a>
+            </li>
+
+        </ul>
+
+        <!-- Tab panes -->
+        <div class="tab-content">
+
+            <!--conteúdo da aba dados de pessoais-->
+            <div role="tabpanel" class="tab-pane active" id="pessoal">
+
+                <!--Apresentação-->
+                <h1><span class="text-primary hidden-xs" ng-bind="user.ds_nome"></span></h1>
+                <h2><span class="text-primary hidden-sm hidden-md hidden-lg" ng-bind="user.ds_nome"></span></h2>
+
+                <form name="formPessoal" class="form-horizontal" ng-show="user != null">
+
+                    <!--sq_pessoa hidden-->
+                    <input name="sq_pessoa" type="hidden" ng-model="user.sq_pessoa" ng-disabled="user.isUpdate" />
+                    <!--sq_pessoa hidden-->
+
+                    <!--campo nome-->
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Nome</label>
+
+                        <div class="col-xs-12 col-sm-6 col-md-6">
+                            <input class="form-control"
+                                   placeholder="Nome e sobrenome"
+                                   name="ds_nome"
+                                   type="text"
+                                   ng-maxlength="50"
+                                   maxlength="50"
+                                   ng-model="user.ds_nome"
+                                   required/>
+                        </div>
+
+                        <div class="help-block-input col-xs-12 col-sm-4 col-md-4">
+                            <span class="text-danger" ng-show="formPessoal.ds_nome.$dirty && formPessoal.ds_nome.$invalid">
+                                <i class="glyphicon glyphicon-remove-sign"></i>
+                                <span ng-show="formPessoal.ds_nome.$error.required">Campo obrigatório</span>
+                                <span ng-show="formPessoal.ds_nome.$error.maxlength">Máximo de cinquenta caracteres</span>
+                            </span>
+
+                        </div>
+                    </div>
+                    <!--campo nome-->
+
+                    <!--campo email-->
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">E-mail</label>
+
+
+                        <div class="col-xs-12 col-sm-6 col-md-6">
+                            <input class="form-control text-lowercase"
+                                   placeholder="E-mail"
+                                   name="ds_email"
+                                   type="email"
+                                   ng-model="user.ds_email"
+                                   maxlength="50"
+                                   ng-maxlength="50"
+                                   required/>
+                        </div>
+
+                        <div class="help-block-input col-xs-12 col-sm-4 col-md-4">
+
+                            <span class="text-danger" ng-show="formPessoal.ds_email.$dirty && formPessoal.ds_email.$invalid">
+                                <i class="glyphicon glyphicon-remove-sign"></i>
+                                <span ng-show="formPessoal.ds_email.$error.required">Campo obrigatório</span>
+                                <span ng-show="formPessoal.ds_email.$error.email">Email inválido</span>
+                                <span ng-show="formPessoal.ds_email.$error.maxlength">Máximo de cinquenta caracteres</span>
+                            </span>
+
+                        </div>
+                    </div>
+                    <!--campo email-->
+
+                    <!--campo perfil-->
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Perfil</label>
+
+                        <div class="col-sm-10 radio radio-center">
+
+                            <label>
+                                <input type="radio" name="sq_perfil" value="1" ng-model="user.sq_perfil" required/> Administrador
+                            </label>
+
+                            <label>
+                                <input type="radio" name="sq_perfil" value="2" ng-model="user.sq_perfil" required /> Cliente
+                            </label>
+
+                        </div>
+                    </div>
+                    <!--campo perfil-->
+
+                    <!--botões-->
+                    <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+
+                            <button type="submit" class="btn btn-primary btn-sm" ng-click="updateDataUser()" ng-Disabled="formPessoal.$invalid">Salvar
+                                <i class="glyphicon glyphicon-save"></i>
+                            </button>
+
+                            <a class="btn btn-default btn-sm" href="#/">Voltar
+                                <i class="glyphicon glyphicon-remove"></i>
+                            </a>
+
+                        </div>
+                    </div>
+
+                </form>
+
             </div>
 
-            <div class="help-block-input col-xs-12 col-sm-4 col-md-4">
-                <span class="text-danger" ng-show="form.ds_nome.$dirty && form.ds_nome.$invalid">
-                    <i class="glyphicon glyphicon-remove-sign"></i>
-                    <span ng-show="form.ds_nome.$error.required">Campo obrigatório</span>
-                    <span ng-show="form.ds_nome.$error.maxlength">Máximo de cinquenta caracteres</span>
-                </span>
+            <!--conteúdo da aba dados de acesso-->
+            <div role="tabpanel" class="tab-pane" id="acesso">
+
+                <!--Apresentação-->
+                <h1><span class="text-primary hidden-xs" ng-bind="user.ds_nome"></span></h1>
+                <h2><span class="text-primary hidden-sm hidden-md hidden-lg" ng-bind="user.ds_nome"></span></h2>
+
+                <form name="formAcesso" class="form-horizontal" ng-show="user != null">
+
+                    <!--sq_pessoa hidden-->
+                    <input name="sq_pessoa" type="hidden" ng-model="user.sq_pessoa" ng-disabled="user.isUpdate" />
+                    <!--sq_pessoa hidden-->
+
+                    <!--campo senha-->
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Senha</label>
+
+
+                        <div class="col-xs-12 col-sm-6 col-md-6">
+
+                            <input class="form-control"
+                                   placeholder="Senha"
+                                   name="ds_senha"
+                                   type="password"
+                                   maxlength="20"
+                                   ng-maxlength="20"
+                                   ng-minlength="4"
+                                   ng-model="user.ds_senha"
+                                   required/>
+                        </div>
+
+                        <div class="help-block-input col-xs-12 col-sm-4 col-md-4">
+
+                            <span class="text-danger" ng-show="formAcesso.ds_senha.$dirty && formAcesso.ds_senha.$invalid">
+                                <i class="glyphicon glyphicon-remove-sign"></i>
+                                <span ng-show="formAcesso.ds_senha.$error.required">Campo obrigatório</span>
+                                <span ng-show="formAcesso.ds_senha.$error.minlength">Mínimo de quatro caracteres</span>
+                                <span ng-show="formAcesso.ds_senha.$error.maxlength">Máximo de vinte caracteres</span>
+                            </span>
+
+                        </div>
+                    </div>
+                    <!--campo senha-->
+
+                    <!--campo confirma senha-->
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Repita a senha</label>
+
+
+                        <div class="col-xs-12 col-sm-6 col-md-6">
+
+                            <input class="form-control"
+                                   placeholder="Repita a senha"
+                                   name="re_senha"
+                                   type="password"
+                                   maxlength="20"
+                                   ng-model="user.re_senha"
+                                   ng-maxlength="20"
+                                   ng-minlength="4"
+                                   required/>
+                        </div>
+
+                        <div class="help-block-input col-xs-12 col-sm-4 col-md-4">
+
+                            <span class="text-danger" ng-show="formAcesso.re_senha.$dirty && formAcesso.re_senha.$invalid">
+                                <i class="glyphicon glyphicon-remove-sign"></i>
+                                <span ng-show="formAcesso.re_senha.$error.required">Campo obrigatório</span>
+                                <span ng-show="formAcesso.re_senha.$error.minlength">Mínimo de quatro caracteres</span>
+                                <span ng-show="formAcesso.re_senha.$error.maxlength">Máximo de vinte caracteres</span>
+                            </span>
+
+                        </div>
+                    </div>
+                    <!--campo confirma senha-->
+
+                    <!--botões-->
+                    <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+
+                            <button type="submit" class="btn btn-primary btn-sm" ng-click="updateDataAccess()" ng-Disabled="formAcesso.$invalid">Salvar
+                                <i class="glyphicon glyphicon-save"></i>
+                            </button>
+
+                            <a class="btn btn-default btn-sm" href="#/">Voltar
+                                <i class="glyphicon glyphicon-remove"></i>
+                            </a>
+
+                        </div>
+                    </div>
+
+                </form>
 
             </div>
+
         </div>
-        <!--campo nome-->
 
-        <!--campo email-->
-        <div class="form-group">
-            <label class="col-sm-2 control-label">E-mail</label>
-
-
-            <div class="col-xs-12 col-sm-6 col-md-6">
-                <input class="form-control text-lowercase"
-                       placeholder="E-mail"
-                       name="ds_email"
-                       type="email"
-                       ng-model="row.ds_email"
-                       maxlength="50"
-                       ng-maxlength="50"
-                       required/>
-            </div>
-
-            <div class="help-block-input col-xs-12 col-sm-4 col-md-4">
-
-                <span class="text-danger" ng-show="form.ds_email.$dirty && form.ds_email.$invalid">
-                    <i class="glyphicon glyphicon-remove-sign"></i>
-                    <span ng-show="form.ds_email.$error.required">Campo obrigatório</span>
-                    <span ng-show="form.ds_email.$error.email">Email inválido</span>
-                    <span ng-show="form.ds_email.$error.maxlength">Máximo de cinquenta caracteres</span>
-                </span>
-
-            </div>
-        </div>
-        <!--campo email-->
-
-        <!--campo senha-->
-        <div class="form-group">
-            <label class="col-sm-2 control-label">Senha</label>
-
-
-            <div class="col-xs-12 col-sm-6 col-md-6">
-
-                <input class="form-control"
-                       placeholder="Senha"
-                       name="ds_senha"
-                       type="password"
-                       maxlength="20"
-                       ng-maxlength="20"
-                       ng-minlength="4"
-                       ng-model="row.ds_senha"
-                       required/>
-            </div>
-
-            <div class="help-block-input col-xs-12 col-sm-4 col-md-4">
-
-                <span class="text-danger" ng-show="form.ds_senha.$dirty && form.ds_senha.$invalid">
-                    <i class="glyphicon glyphicon-remove-sign"></i>
-                    <span ng-show="form.ds_senha.$error.required">Campo obrigatório</span>
-                    <span ng-show="form.ds_senha.$error.minlength">Mínimo de quatro caracteres</span>
-                    <span ng-show="form.ds_senha.$error.maxlength">Máximo de vinte caracteres</span>
-                </span>
-
-            </div>
-        </div>
-        <!--campo senha-->
-
-        <!--campo confirma senha-->
-        <div class="form-group">
-            <label class="col-sm-2 control-label">Repita a senha</label>
-
-
-            <div class="col-xs-12 col-sm-6 col-md-6">
-
-                <input class="form-control"
-                       placeholder="Repita a senha"
-                       name="re_senha"
-                       type="password"
-                       maxlength="20"
-                       ng-model="row.re_senha"
-                       ng-maxlength="20"
-                       ng-minlength="4"
-                       required/>
-            </div>
-
-            <div class="help-block-input col-xs-12 col-sm-4 col-md-4">
-
-                <span class="text-danger" ng-show="form.re_senha.$dirty && form.re_senha.$invalid">
-                    <i class="glyphicon glyphicon-remove-sign"></i>
-                    <span ng-show="form.re_senha.$error.required">Campo obrigatório</span>
-                    <span ng-show="form.re_senha.$error.minlength">Mínimo de quatro caracteres</span>
-                    <span ng-show="form.re_senha.$error.maxlength">Máximo de vinte caracteres</span>
-                </span>
-
-            </div>
-        </div>
-        <!--campo confirma senha-->
-
-        <!--campo perfil-->
-        <div class="form-group">
-            <label class="col-sm-2 control-label">Perfil</label>
-
-            <div class="col-sm-10 radio radio-center">
-
-                <label>
-                    <input type="radio" name="sq_perfil" value="1" ng-model="row.sq_perfil" required/> Administrador
-                </label>
-
-                <label>
-                    <input type="radio" name="sq_perfil" value="2" ng-model="row.sq_perfil" required /> Cliente
-                </label>
-
-            </div>
-        </div>
-        <!--campo perfil-->
-
-        <!--botões-->
-        <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-
-                <button type="submit" class="btn btn-primary btn-sm" ng-click="save()" ng-Disabled="form.$invalid">Salvar
-                    <i class="glyphicon glyphicon-save"></i>
-                </button>
-
-                <a class="btn btn-default btn-sm" href="#/user">Voltar
-                    <i class="glyphicon glyphicon-remove"></i>
-                </a>
-
-            </div>
-        </div>
-
-    </form>
+    </div>
 
 </div>
