--- a/view/user/update.html
+++ b/view/user/update.html
@@ -89,7 +89,7 @@
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
 
-                <button type="submit" class="btn btn-primary btn-sm" ng-click="updateDataUser()" ng-Disabled="formPessoal.$invalid">Salvar
+                <button type="submit" class="btn btn-primary btn-sm" ng-click="updateDataUser('admin')" ng-Disabled="formPessoal.$invalid">Salvar
                     <i class="glyphicon glyphicon-save"></i>
                 </button>
 
