[UP] Funcionalidade de cadastro de cliente "cadastre-se" e links

--- a/css/complemento.css
+++ b/css/complemento.css
@@ -22,7 +22,7 @@ body.modal-open .container-fluid{
     padding-top: 20px;
     padding-bottom: 20px;
     margin-bottom: 20px;
-    background: url('../img/fundo_banner_fulo3.png');
+    background: url('../img/banner/fundo_banner_fulo3.png');
 }
 /*configuração do panning (motio) do banner topo*/
 
