--- a/view/general/main.html
+++ b/view/general/main.html
@@ -5,7 +5,7 @@
     <div class="col-md-12 panning" id="panning">
 
         <div class="col-xs-4" align="right">
-            <img src="img/logo.png" />
+            <img src="img/logo.png" class="img-responsive" alt="Responsive image" />
         </div>
 
         <div class="col-md-4 text-center">
@@ -14,7 +14,7 @@
         </div>
 
         <div class="col-sm-4 hidden-xs hidden-sm">
-            <img src="img/logo.png" />
+            <img src="img/banner/maquina.png" width="200" height="150" class="img-responsive" alt="Responsive image"/>
         </div>
 
     </div>
@@ -26,7 +26,7 @@
 <div class="row">
 
     <!--Novidades-->
-    <div class="col-md-12 col-md-4">
+    <div class=" col-md-6 col-lg-6">
 
         <div class="thumbnail">
 
@@ -47,7 +47,7 @@
                 <div class="carousel-inner" role="listbox">
 
                     <div class="item active" align="center">
-                        <img src="img/carousel_novidade/avental.png" />
+                        <img src="img/carousel_novidade/avental.png" class="img-responsive" alt="Responsive image" />
                         <div class="carousel-caption">
                             <h3>Avental da jô</h3>
                             <p>Lindo avental feito especialmente para a Jô</p>
@@ -55,7 +55,7 @@
                     </div>
 
                     <div class="item" align="center">
-                        <img src="img/carousel_novidade/kitbebe.png" />
+                        <img src="img/carousel_novidade/kitbebe.png" class="img-responsive" alt="Responsive image" />
                         <div class="carousel-caption">
                             <h3>Kit Bebê</h3>
                             <p>Quarto personalizado para bebê</p>
@@ -63,7 +63,7 @@
                     </div>
 
                     <div class="item" align="center">
-                        <img src="img/carousel_novidade/bolsas.png" />
+                        <img src="img/carousel_novidade/bolsas.png" class="img-responsive" alt="Responsive image" />
                         <div class="carousel-caption">
                             <h3>Bolsas</h3>
                             <p>Lindas bolsas feita pela Lindeza</p>
@@ -88,11 +88,21 @@
     </div>
     <!--Novidades-->
 
+    <div class="col-sm-6 col-md-6 col-lg-6" align="center">
+        <div class="thumbnail">
+            <div class="caption">
+                <h3>Ofertas</h3>
+                <img src="img/carousel_novidade/mimos.png" height="270" width="200" class="img-responsive" alt="Responsive image" />
+                <p>Marcador de livros, Chaveiros, Cadernetas</p>
+            </div>
+        </div>
+    </div>
+
     <div class="col-sm-3 col-md-2" align="center">
         <div class="thumbnail">
             <div class="caption">
                 <h3>Acessórios</h3>
-                <img src="img/carousel_novidade/mimos.png" height="150" width="150"/>
+                <img src="img/carousel_novidade/mimos.png" height="150" width="150" class="img-responsive" alt="Responsive image" />
                 <p>Marcador de livros, Chaveiros, Cadernetas</p>
             </div>
         </div>
@@ -102,7 +112,7 @@
         <div class="thumbnail">
             <div class="caption">
                 <h3>Bolsas</h3>
-                <img src="img/carousel_novidade/bolsas.png" height="150" width="150"/>
+                <img src="img/carousel_novidade/bolsas.png" height="150" width="150" class="img-responsive" alt="Responsive image" />
                 <p>Bolsas, Ecobags, Necessaire</p>
             </div>
         </div>
@@ -112,7 +122,7 @@
         <div class="thumbnail">
             <div class="caption">
                 <h3>Infatil</h3>
-                <img src="img/carousel_novidade/kitbebe.png" height="150" width="150"/>
+                <img src="img/carousel_novidade/kitbebe.png" height="150" width="150" class="img-responsive" alt="Responsive image" />
                 <p>Almofadas, Mantas, Mantas, Mantas, xD etc...</p>
             </div>
         </div>
@@ -122,7 +132,7 @@
         <div class="thumbnail">
             <div class="caption">
                 <h3>Aventais</h3>
-                <img src="img/carousel_novidade/avental.png" height="150" width="150"/>
+                <img src="img/carousel_novidade/avental.png" height="150" width="150" class="img-responsive" alt="Responsive image" />
                 <p>Aventais, Aventais, Aventais...</p>
             </div>
         </div>
