[UP] Ajustando parametros em requisição GET

--- a/view/user/add.html
+++ b/view/user/add.html
@@ -152,7 +152,7 @@
                 <i class="glyphicon glyphicon-save"></i>
             </button>
 
-            <a class="btn btn-default btn-sm" href="#/user">Voltar
+            <a class="btn btn-default btn-sm" href="#/user">Cancelar
                 <i class="glyphicon glyphicon-remove"></i>
             </a>
 
