--- a/view/user/editCustomer.html
+++ b/view/user/editCustomer.html
@@ -140,7 +140,7 @@
                 <form name="formAcesso" class="form-horizontal" ng-show="user != null">
 
                     <!--sq_pessoa hidden-->
-                    <input name="sq_pessoa" type="hidden" ng-model="user.sq_pessoa" ng-disabled="user.isUpdate" />
+                    <input name="sq_pessoa" type="hidden" ng-model="user.sq_pessoa"/>
                     <!--sq_pessoa hidden-->
 
                     <!--campo senha-->
