[UP] Configurado merge de dados de origem e retirado funcão que retornava json.

--- a/view/user/editCustomer.html
+++ b/view/user/editCustomer.html
@@ -209,7 +209,7 @@
                     <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10">
 
-                            <button type="submit" class="btn btn-primary btn-sm" ng-click="updateDataAccess()" ng-Disabled="formAcesso.$invalid">Salvar
+                            <button type="submit" class="btn btn-primary btn-sm" ng-click="userUpAccess()" ng-Disabled="formAcesso.$invalid">Salvar
                                 <i class="glyphicon glyphicon-save"></i>
                             </button>
 
