[UP] Atualização MER e remoção de caracteres especiais.

--- a/view/user/add.html
+++ b/view/user/add.html
@@ -7,7 +7,7 @@
 <form name="form" class="form-horizontal">
 
     <!--sq_pessoa hidden-->
-    <input name="sq_pessoa" type="hidden" ng-model="row.sq_pessoa" ng-disabled="row.isUpdate" />
+    <input name="sq_pessoa" type="hidden" ng-model="row.sq_pessoa" />
     <!--sq_pessoa hidden-->
 
     <!--campo nome-->
