[UP] Autoload for controller directory and auto generate backend and frontend constants

--- a/css/complemento.css
+++ b/css/complemento.css
@@ -99,5 +99,6 @@ body {
 
 /*centraliza a label do radio inline*/
 .radio-center {
-    padding-top: 2px !important;
+    /*padding-top: 6px !important;*/
+    margin-left: -5px !important;
 }
